preping home page, need to get $location setup

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,12 +1,26 @@
 <div class="container">
 	<div class="col-sm-6">
 		<h3>About</h3>
+
 		<h3>Portfolio</h3>
+
+			<img class='about1' src='/images/about1.jpg' />
+
 		<h3>Services</h3>
+
+			<img class='about1' src='/images/about1.jpg' />
+
 		<h3>Weddings</h3>
+
+			<img class='about1' src='/images/about1.jpg' />
+
 		<h3>blog</h3>
+
+			<img class='about1' src='/images/about1.jpg' />
+
 		<h3>Contact</h3>
 
+			<img class='about1' src='/images/about1.jpg' />
 	</div>
 </div>
 
