--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,28 +1,24 @@
 <div class="container">
 	<div class="col-sm-6">
-		<p>About</p>
+		<h4>About</h4>
 
 		<a href="#/about"><img class='aboutMe' alt='click to learn about me' src='/images/homeAboutMe.jpg' /></a>
 
-		<p>Portfolio</p>
+		<h4>Portfolio</h4>
 
-			<img src='/images/about1.jpg' />
+		<a href="#/portfolio"><img class='aboutMe' alt='click to view my portfolio' src='/images/homePortfolio.jpg' /></a>
 
-		<p>Services</p>
+		<h4>Services</h4>
 
-			<img src='/images/about1.jpg' />
+		<a href="#/services"><img class='aboutMe' alt='click to see my services' src='/images/homeServices.jpg' /></a>
 
-		<p>Weddings</p>
+		<h4>Weddings</h4>
 
-			<img src='/images/about1.jpg' />
+		<a href="#/weddings"><img class='aboutMe' alt='click to learn about my wedding services' src='/images/homeWeddings.jpg' /></a>
 
-		<p>blog</p>
+		<h4>Contact</h4>
 
-			<img src='/images/about1.jpg' />
-
-		<p>Contact</p>
-
-			<img src='/images/about1.jpg' />
+		<a href="#/contact"><img class='aboutMe' alt='click to contact me' src='/images/homeContact.jpg' /></a>
 	</div>
 </div>
 
