--- a/public/templates/services.html
+++ b/public/templates/services.html
@@ -145,7 +145,7 @@
 
 		<h6><mark>Possible location fee</mark></h6>
 
-		<img class='services' src='/images/services.jpg'>
+		<!-- <img class='services' src='/images/services.jpg'> -->
 
 		<!-- <img src='folder/image1.png' /> or jpeg -->
 
