--- a/public/templates/services.html
+++ b/public/templates/services.html
@@ -149,6 +149,13 @@
 
 		<!-- <img src='folder/image1.png' /> or jpeg -->
 
+	<!-- <button ng-click="instaTest()">Do it</button> -->
+
+
+	<div ng-repeat="picture in pictures">
+		<a target="_blank" href="{{picture.urlLink}}"><img src="{{picture.lowRes}}" /></a>
+	</div>	
+
 		<!-- I WANT TO PUT MY INSTAGRAM API HERE -->
 
 	</div>
