various updates to app

--- a/public/templates/services.html
+++ b/public/templates/services.html
@@ -149,8 +149,11 @@
 
 		<!-- <img src='folder/image1.png' /> or jpeg -->
 
-	<!-- <button ng-click="instaTest()">Do it</button> -->
+	<!-- <button ng-click="getPictures()">Do it</button> -->
 
+	<div class="well">
+		test
+	</div>
 
 	<div ng-repeat="picture in pictures">
 		<a target="_blank" href="{{picture.urlLink}}"><img src="{{picture.lowRes}}" /></a>
