--- a/public/templates/portfolio.html
+++ b/public/templates/portfolio.html
@@ -6,14 +6,14 @@
 
 	<!-- <div class="col-sm-2"> -->
 
-		<img class='port1' src='/images/portfolio1.jpg'>
-		<img class='port2' src='/images/portfolio2.jpg'>
-		<img class='port3' src='/images/portfolio3.jpg'>
-		<img class='port4' src='/images/portfolio4.jpg'>
-		<img class='port5' src='/images/portfolio5.jpg'>
-		<img class='port6' src='/images/portfolio6.jpg'>
-		<img class='port7' src='/images/portfolio7.jpg'>
-		<img class='port8' src='/images/portfolio8.jpg'>
+		<img class='portfolio' src='/images/portfolio1.jpg'>
+		<img class='portfolio' src='/images/portfolio2.jpg'>
+		<img class='portfolio' src='/images/portfolio3.jpg'>
+		<img class='portfolio' src='/images/portfolio4.jpg'>
+		<img class='portfolio' src='/images/portfolio5.jpg'>
+		<img class='portfolio' src='/images/portfolio6.jpg'>
+		<img class='portfolio' src='/images/portfolio7.jpg'>
+		<img class='portfolio' src='/images/portfolio8.jpg'>
 <!-- 
 		<input text="text" placeholder='Enter Comment Here'></input>
 		<button>submit</button>
