--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,10 +1,12 @@
-<div class="container">
+<div class="container-fluid">
 	<div class="col-lg-12">
 		<div class="row">
 			<div class="col-sm-4">
-				<h4>About</h4>
 
-				<a href="#/about"><img class='home' alt='click to learn about me' src='/images/homeAboutMe.jpg' /></a>
+				<h4>Portfolio</h4>
+
+				<a href="#/portfolio"><img class='homePortfolio' alt='click to view my portfolio' src='/images/homePortfolio.jpg' /></a>
+
 			</div>
 			<div ng-controller="homeCtrl" class="col-sm-4">
 				<div>
@@ -17,18 +19,24 @@
 			</div>
 
 			<div class="col-sm-4">
-				<h4>Contact</h4>
 
-				<a href="#/contact"><img class='home' alt='click to contact me' src='/images/homeContact.jpg' /></a>
+				<h4>Weddings</h4>
+
+				<a href="#/weddings"><img class='homeWeddings' alt='click to learn about my wedding services' src='/images/homeWeddings.jpg' /></a>
+
 			</div>
 		</div>
 
 
 		<div class="row">
 			<div class="col-sm-4">
-				<h4>Portfolio</h4>
+			
+				<div class="homeAboutTitle">
+				About
+				</div>
+				<a href="#/about"><img class='homeAboutMe' alt='click to learn about me' src='/images/homeAboutMe.jpg' /></a>
 
-				<a href="#/portfolio"><img class='home' alt='click to view my portfolio' src='/images/homePortfolio.jpg' /></a>
+
 			</div>
 		
 			<div class="col-sm-4">
@@ -38,9 +46,10 @@
 			</div>
 			
 			<div class="col-sm-4">
-				<h4>Weddings</h4>
+				
+				<h4>Contact</h4>
 
-				<a href="#/weddings"><img class='home' alt='click to learn about my wedding services' src='/images/homeWeddings.jpg' /></a>
+				<a href="#/contact"><img class='home' alt='click to contact me' src='/images/homeContact.jpg' /></a>
 			</div>
 		</div>
 	</div>
