home view complete, for now

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -2,10 +2,11 @@
 	<div class="col-lg-12">
 		<div class="row">
 			<div class="col-sm-4">
+				<div class="homeTitle">
+					<h4>Portfolio</h4>
 
-				<h4>Portfolio</h4>
-
-				<a href="#/portfolio"><img class='homePortfolio' alt='click to view my portfolio' src='/images/homePortfolio.jpg' /></a>
+					<a href="#/portfolio"><img class='homePortfolio' alt='click to view my portfolio' src='/images/homePortfolio.jpg' /></a>
+				</div>
 
 			</div>
 			<div ng-controller="homeCtrl" class="col-sm-4">
@@ -19,37 +20,38 @@
 			</div>
 
 			<div class="col-sm-4">
+				<div class="homeTitle">
+					<h4>Weddings</h4>
 
-				<h4>Weddings</h4>
-
-				<a href="#/weddings"><img class='homeWeddings' alt='click to learn about my wedding services' src='/images/homeWeddings.jpg' /></a>
-
+					<a href="#/weddings"><img class='homeWeddings' alt='click to learn about my wedding services' src='/images/homeWeddings.jpg' /></a>
+				</div>
 			</div>
 		</div>
 
 
 		<div class="row">
 			<div class="col-sm-4">
-			
-				<div class="homeAboutTitle">
-				About
+				<div class="homeTitle">
+					<h4>About</h4>
 				</div>
 				<a href="#/about"><img class='homeAboutMe' alt='click to learn about me' src='/images/homeAboutMe.jpg' /></a>
-
 
 			</div>
 		
 			<div class="col-sm-4">
-				<h4>Services</h4>
+				<div class="homeTitle">
+					<h4>Services</h4>
 
-				<a href="#/services"><img class='home' alt='click to see my services' src='/images/homeServices.jpg' /></a>
+					<a href="#/services"><img class='homeServices' alt='click to see my services' src='/images/homeServices.jpg' /></a>
+				</div>
 			</div>
 			
 			<div class="col-sm-4">
-				
-				<h4>Contact</h4>
+				<div class="homeTitle">
+					<h4>Contact</h4>
 
-				<a href="#/contact"><img class='home' alt='click to contact me' src='/images/homeContact.jpg' /></a>
+					<a href="#/contact"><img class='homeContact' alt='click to contact me' src='/images/homeContact.jpg' /></a>
+				</div>
 			</div>
 		</div>
 	</div>
